feat: change database, fixes issues for reservation api
