# storage/api-docs/api-docs.json
@@ -40,7 +40,7 @@
                         }
                     },
                     "500": {
-                        "description": "No categories found"
+                        "description": "No categorie(s) found"
                     }
                 }
             },
@@ -397,7 +397,7 @@
                         }
                     },
                     "500": {
-                        "description": "No categoriesMovies found"
+                        "description": "No categoriesMovie(s) found"
                     }
                 }
             },
@@ -689,6 +689,146 @@
                 }
             }
         },
+        "/api/medias": {
+            "get": {
+                "tags": [
+                    "Media"
+                ],
+                "summary": "Gets the list of media",
+                "description": "Returns the list of media with optional pagination",
+                "operationId": "getMediaList",
+                "parameters": [
+                    {
+                        "name": "perPage",
+                        "in": "query",
+                        "description": "Number of medias per page",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "default": 10
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "object"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "No media(s) found"
+                    }
+                }
+            }
+        },
+        "/api/medias/{id}": {
+            "get": {
+                "tags": [
+                    "Media"
+                ],
+                "summary": "Get media by ID",
+                "description": "Returns a single media",
+                "operationId": "getMediaById",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of media to return",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer",
+                                            "format": "int64",
+                                            "example": 1
+                                        },
+                                        "media_path": {
+                                            "type": "string",
+                                            "example": "/path/to/media"
+                                        },
+                                        "media_url": {
+                                            "type": "string",
+                                            "example": "http://example.com/media"
+                                        },
+                                        "media_type": {
+                                            "type": "string",
+                                            "example": "image"
+                                        },
+                                        "created_at": {
+                                            "type": "string",
+                                            "format": "date-time",
+                                            "example": "2021-09-15T00:00:00Z"
+                                        },
+                                        "updated_at": {
+                                            "type": "string",
+                                            "format": "date-time",
+                                            "example": "2021-09-15T00:00:00Z"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Media not found"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Media"
+                ],
+                "summary": "Delete a media",
+                "description": "Deletes a media and returns a success message",
+                "operationId": "deleteMedia",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of media to delete",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Media deleted successfully"
+                    },
+                    "404": {
+                        "description": "Media not found"
+                    },
+                    "500": {
+                        "description": "Error deleting media"
+                    }
+                }
+            }
+        },
         "/api/movies": {
             "get": {
                 "tags": [
@@ -724,7 +864,7 @@
                         }
                     },
                     "500": {
-                        "description": "No movies found"
+                        "description": "No movie(s) found"
                     }
                 }
             },
@@ -761,10 +901,15 @@
                                         "format": "date",
                                         "example": "2021-09-15"
                                     },
-                                    "rating": {
+                                    "rate": {
                                         "type": "number",
-                                        "format": "float",
+                                        "format": "int",
                                         "example": 5
+                                    },
+                                    "duration": {
+                                        "type": "number",
+                                        "format": "int",
+                                        "example": 8
                                     }
                                 },
                                 "type": "object"
@@ -797,10 +942,15 @@
                                             "format": "date",
                                             "example": "2021-09-15"
                                         },
-                                        "rating": {
+                                        "rate": {
                                             "type": "number",
-                                            "format": "float",
+                                            "format": "int",
                                             "example": 5
+                                        },
+                                        "duration": {
+                                            "type": "number",
+                                            "format": "int",
+                                            "example": 8
                                         }
                                     },
                                     "type": "object"
@@ -904,9 +1054,14 @@
                                             "format": "date",
                                             "example": "2021-09-15"
                                         },
-                                        "rating": {
+                                        "rate": {
                                             "type": "number",
-                                            "format": "float",
+                                            "format": "int",
+                                            "example": 8
+                                        },
+                                        "duration": {
+                                            "type": "number",
+                                            "format": "int",
                                             "example": 8
                                         }
                                     },
@@ -968,9 +1123,14 @@
                                         "format": "date",
                                         "example": "2021-09-15"
                                     },
-                                    "rating": {
+                                    "rate": {
                                         "type": "number",
-                                        "format": "float",
+                                        "format": "int",
+                                        "example": 8
+                                    },
+                                    "duration": {
+                                        "type": "number",
+                                        "format": "int",
                                         "example": 8
                                     }
                                 },
@@ -1004,9 +1164,14 @@
                                             "format": "date",
                                             "example": "2021-09-15"
                                         },
-                                        "rating": {
+                                        "rate": {
                                             "type": "number",
-                                            "format": "float",
+                                            "format": "int",
+                                            "example": 8
+                                        },
+                                        "duration": {
+                                            "type": "number",
+                                            "format": "int",
                                             "example": 8
                                         }
                                     },
